--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,7 @@
 name: animated_clock_indicator
-description: "AnimatedClock is a highly customizable Flutter package that provides a sleek animated clock widget. 
-  It offers extensive configuration options for border styling, clock hand dimensions, colors, rotation durations, 
-  and animation ratios through the `AnimatedClockOptions` class. Designed with performance and flexibility in mind, 
-  the package utilizes immutable and final classes to ensure stability and optimal rendering. 
-  Easily integrate AnimatedClock into your Flutter applications to create visually appealing and responsive clock interfaces 
-  that enhance user experience."
-version: 1.0.0
+description: "A customizable animated clock indicator widget for Flutter."
+
+version: 1.0.1
 homepage: https://github.com/nkalahanov/animated_clock_indicator
 repository: https://github.com/nkalahanov/animated_clock_indicator
 
@@ -29,4 +25,4 @@ keywords:
   - message loading
   - message sending
 
-license: MIT
+license: "MIT"
