--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: animated_clock_indicator
-description: "A customizable animated clock indicator widget for Flutter."
+description: "A customizable animated clock indicator widget for Flutter, allowing developers to add visually appealing, configurable clock animations to their applications."
 
-version: 1.0.1
+version: 1.0.2
 homepage: https://github.com/nkalahanov/animated_clock_indicator
 repository: https://github.com/nkalahanov/animated_clock_indicator
 
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 keywords:
   - animated clock
   - animated clock indicator
